--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.1",
+    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "passport-jwt": "^4.0.1",
